Azure Plugins (#127)
* future azure stuff here

* Setting up Azure Message Processing via creating basis interface.

* Updated with code that in theory should work. Fixed build.

* EitherMonad now has run() method.

* Proper substitute for SQS, called AQS. Hmm.

* Updated with EitherMonad.Nothing

* Basic of Azure Blob Storage is now in!

* Versioning is also incorporated.

* A bit of code fixing and refactoring.

* Updated with JavaDoc.

* Updated with JavaDoc.

* Updated with JavaDoc.

* Updated with JavaDoc.

* Useful methods to get body and id of messages.

* SecretManager is in a bit better place.

* After refactoring all tests run.

* updated with better tests for coverage

* updated further code coverage

* Making Model much better tested.

* Testing null in the VersionedStorage.

* Testing null in NULL model of Cron.

* Fixed a small bug in time series storage.

* adding coverage for the SQSWrapper message interfaces

* Fixed perf test in prefixLogger.

* Removed stale code in Scriptable

* Improved Auth Tests.

* Improved Auth Tests - II.

* curlwrapper now properly tested

* Slightly better test and coverage on SecretManager

* Covered Azure Key Vault.

* AQSWrapper is now tested.

* ABSStorageWrapper is now fully tested.

---------

Co-authored-by: ajafri2001 <abdullahjafri2001@gmail.com>